refactor @Problem annotation